<resources>

    <string name="app_name">Strom und Spannung</string>

    <!-- Berechnung R2 -->
    <string name="berechnung_r2">Berechnung R2</string>
    <string name="berechnung_r2_beschreibung">Berechnung von R2 auf Grund des Ersatzwiderstandes.</string>

    <!-- Berechnung von RGesamt -->
    <string name="berechnung_rgesamt">Berechnung von RGesamt</string>
    <string name="berechnung_rgesamt_beschreibung">Berechnung von RGesamt (Ersatzwiderstand) mit 2 parallell geschalteten Widerständen.</string>

    <!-- RGesamt bei Rn -->
    <string name="berechnung_rgesamtbeirn">RGesamt bei Rn</string>
    <string name="berechnung_ersatzwiderstand_mehr2_beschreibung">Berechnung des Ersatzwiderstands wenn es mehr als 2 parallelgeschaltete Widerstände hat.</string>

    <!-- Die elektrische Spannung -->
    <string name="berechnung_spannung">Die elektrische Spannung</string>
    <string name="berechnung_spannung_beschreibung">Die Spannung ist die elektrische Kraft (Druck) welche die Elektronen durch den geschlossenen Stromkreis treibt.</string>

    <!-- Der elektrische Strom -->
    <string name="berechnung_strom">Der elektrische Strom</string>
    <string name="berechnung_strom_beschreibung">Man hat sich den elektrischen Strom tatsächlich als Fluss von Teilchen (wie einen Wasserstrom in einer Röhre) vorzustellen.</string>

    <!-- Der elektrische Widerstand -->
    <string name="berechung_widerstand">Der elektrische Widerstand</string>
    <string name="berechung_widerstand_beschreibung">Der Widerstand eines Leiters behindert den Elektronenfluss. Er hängt vom Leitermaterial und von den Abmessungen des Leiters ab.</string>

    <!-- Widerstand el. Leiter -->
    <string name="berechnung_widerstandelleiter">Widerstand el. Leiter</string>
    <string name="berechnung_widerstandelleiter_beschreibung">Wenn der Temperatureinfluss nicht berücksichtigt wird, ist der Widerstand eines Drahtes proportional zur Länge und zum spezifischen Widerstand und umgekehrt proportional zum Querschnitt.</string>

    <!-- Widerstandsänderung -->
    <string name="berechnung_widerstandsaenderung">Berechnung Widerstandsänderung</string>
    <string name="berechnung_widerstandsaenderung_beschreibung">Berechnung der Widerstandsänderung mit der Temperatur.</string>

    <!-- navigation drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="drawer_titel">
        <item>Ohmsches Gesetz</item>
        <item>Strom</item>
        <item>Spannung</item>
        <item>Widerstand</item>
        <item>Ersatzwiderstand</item>
        <item>Berechnung R2</item>
        <item>Berechnung RGesamt</item>
        <item>RGesamt bei Rn</item>
        <item>Widerstand</item>
        <item>Widerstand el. Leiter</item>
        <item>Widerstand Temperatur</item>
    </string-array>
    <string-array name="drawer_descriptions">
        <item></item>
        <item>Berechnung des Stroms</item>
        <item>Berechnung der Spannung</item>
        <item>Berechnung des Widerstandes</item>
        <item></item>
        <item>Berechnung des 2. Widerstandes</item>
        <item>Berechnung von RGesamt</item>
        <item>Berechnung von RGesamt bei Rn</item>
        <item></item>
        <item>Widerstand el. Leiter</item>
        <item>Widerstandsänderung</item>
    </string-array>

    <!-- various things -->
    <string name="strom_i">Strom (I)</string>
    <string name="widerstand_r">Widerstand (R)</string>
    <string name="spannung_u">Spannung (U)</string>
    <string name="rgesamt">RGesamt :</string>
    <string name="r1">R1 :</string>
    <string name="r2">R2 :</string>
    <string name="ergebnis">Ergebnis :</string>
    <string name="loeschen">Löschen</string>
    <string name="berechnen">Berechnen</string>
    <string name="hinzufuegen">add</string>
    <string name="default_nochnichthinzugefuegt">noch keine Widerstände hinzugefügt.</string>
    <string name="berechnung">Berechnung</string>
    <string name="multiplicator">*</string>
    <string name="divider">/</string>
    <string name="ma">mA</string>
    <string name="spezifischer_widerstand">Spezifischer Widerstand (entweder via Dropdown oder direkte Eingabe):</string>
    <string name="laenge">Länge :</string>
    <string name="querschnitt">Querschnitt :</string>
    <string name="hinzugefuegte_widerstaende">Hinzugefügte Widerstände :</string>
    <string name="material">Material:</string>
    <string name="anfangstemperatur">Anfangstemperatur :</string>
    <string name="anfangswiderstand">Anfangswiderstand :</string>
    <string name="betriebstemperartur">Betriebstemperatur :</string>
    <string name="betriebswiderstand">Betriebswiderstand :</string>
    <string name="aluminium">Aluminium</string>
    <string name="blei">Blei</string>
    <string name="kupfer">Kupfer</string>
    <string name="wolfram">Wolfram</string>
    <string name="_ohm">" Ohm"</string>
    <string name="_c">" °C"</string>
    <string name="_20_c">20°C</string>
    <string name="_k">" K"</string>
    <string name="_mm_">" mm²"</string>
    <string name="_ohm_mm_m">" Ohm mm²/m"</string>
    <string name="radius_eingeben">Radius eingeben</string>
    <string name="bronze">Bronze</string>
    <string name="chromnickel">Chromnickel</string>
    <string name="konstantan">Konstantan</string>
    <string name="silber">Silber</string>
    <string name="_v">" V"</string>
    <string name="_a">" A"</string>
    <string name="_m">" m"</string>
    <string name="_ma">" mA"</string>
    <string name="x2">x2</string>
    <string name="querschnitt_symbol">Ø</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="radius_">Radius:</string>
    <string name="strom">Strom :</string>
    <string name="widerstand">Widerstand :</string>
    <string name="spannung">Spannung :</string>

</resources>