<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/berechung_widerstand"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berechung_widerstand_beschreibung" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/berechnung"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/ergWiderstandSpannung"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/spannung_u"
                        android:inputType="number|numberDecimal" />

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/divider"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/ergWiderstandStrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/strom_i"
                        android:inputType="number|numberDecimal" />
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/ergebnisWiderstand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number|numberDecimal" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp" >

                <Button
                    android:id="@+id/del3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loeschen" />

                <Button
                    android:id="@+id/berechnenWiderstand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/berechnen" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>