<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp" >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingTop="8dp"
        android:text="@string/berechnung_spannung"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView7"
        android:text="@string/berechnung_spannung_beschreibung" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView14"
        android:paddingTop="8dp"
        android:text="@string/berechnung"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/ergSpannungStrom"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ergSpannungWiderstand"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView02"
        android:ems="10"
        android:inputType="number|numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/ergebnisSpannung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ergSpannungWiderstand"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ergSpannungWiderstand"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="number|numberDecimal" />

    <Button
        android:id="@+id/del2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ergebnisSpannung"
        android:text="@string/loeschen" />

    <Button
        android:id="@+id/berechnenSpannung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/del2"
        android:layout_alignBottom="@+id/del2"
        android:layout_toRightOf="@+id/del2"
        android:text="@string/berechnen" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/del2"
        android:layout_marginTop="85dp"
        android:layout_toRightOf="@+id/del2" >
    </LinearLayout>

    <EditText
        android:id="@+id/ergSpannungWiderstand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ergSpannungStrom"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ergSpannungStrom"
        android:layout_alignBottom="@+id/ergSpannungStrom"
        android:layout_alignLeft="@+id/TextView02"
        android:text="@string/strom" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ergSpannungWiderstand"
        android:layout_alignBottom="@+id/ergSpannungWiderstand"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/widerstand" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ergebnisSpannung"
        android:layout_alignBottom="@+id/ergebnisSpannung"
        android:layout_alignLeft="@+id/del2"
        android:text="@string/ergebnis" />

</RelativeLayout>