<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical" >

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingTop="8dp"
        android:text="@string/berechnung_rgesamt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView02"
        android:text="@string/berechnung_rgesamt_beschreibung"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/r11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/r22"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView03"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/r11"
        android:layout_alignBottom="@+id/r11"
        android:layout_alignParentLeft="true"
        android:text="@string/r1" />

    <EditText
        android:id="@+id/r22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ewider2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/r11"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/r22"
        android:layout_alignBottom="@+id/r22"
        android:layout_alignParentLeft="true"
        android:text="@string/r2" />

    <EditText
        android:id="@+id/ewider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/r22"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ewider2"
        android:layout_alignBottom="@+id/ewider2"
        android:layout_alignParentLeft="true"
        android:text="@string/rgesamt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ewider2"
        android:layout_below="@+id/ewider2" >

        <Button
            android:id="@+id/del5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loeschen" />

        <Button
            android:id="@+id/berechnen2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/berechnen" />
    </LinearLayout>

</RelativeLayout>